--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Journal\\": "src/"
+            "Journal\\": "src/Journal/",
+            "Shared\\": "src/Shared/"
         }
     },
     "autoload-dev": {
